--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,7 @@
   <div id="mocha"></div>
   <div id="fixture" style="visibility: visible">
     <div id="wrapper">
-      <div class="toc"></div>
+      <div class="toc" id="toc1"></div>
     </div>
     <div id="content_wrapper">
       <h1>Page Title</h1>
